chore: exclude skills folder from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,8 @@ reports/
 # -----------------------------------------------
 .fvm/
 .flutter-version
+
+# -----------------------------------------------
+# AI Skills (cài riêng bằng install_skills.py)
+# -----------------------------------------------
+.agent/skills/
